2009-01-24  Release Manager

	* GCC 4.3.3 released.

2009-01-12  Andrew Haley  <aph@redhat.com>

	PR libgcj/38396:
	* libgcj_bc.c: Sort lines.
	*(_Jv_LookupInterfaceMethod, _Jv_MonitorExit,
	_Jv_RegisterResource, _Jv_JNI_PopSystemFrame): Add.

	* sun/misc/natUnsafe.cc (spinlock contructor): Call sched_yield().

2008-08-27  Release Manager

	* GCC 4.3.2 released.

2008-08-22  Andrew Haley  <aph@redhat.com>

	PR libgcj/8995:
	
	* interpret-run.cc (REWRITE_INSN): Null this macro.

	* include/jvm.h (class _Jv_Linker): Declare resolve_mutex, init.
	(read_cpool_entry, write_cpool_entry): New functions.
	* link.cc (_Jv_Linker::resolve_mutex): new.
	(_Jv_Linker::init): New function.
	(_Jv_Linker::resolve_pool_entry): Use {read,write}_cpool_entry
	to ensure atomic access to constant pool entries.

2008-08-05  Matthias Klose  <doko@ubuntu.com>

	PR libgcj/31890
	* gcj/javaprims.h: Regenerate class list.
	* HACKING: Update instructions how to build gcj/javaprims.h.

2008-07-02  Matthias Klose  <doko@ubuntu.com>

	* configure.ac: Substitute gcjsubdir.
	* Makefile.am (db_pathtail): Use it.
	* Makefile.in include/Makefile.in, testsuite/Makefile.in,
	gcj/Makefile.in, configure: Regenerate.

2008-06-06  Release Manager

	* GCC 4.3.1 released.

2008-05-20  David Daney  <ddaney@avtrex.com>

	PR libgcj/36252
	* java/lang/natString.ccn: Add
	#include <java/io/CharConversionException.h>.
	(init (byte[], int, int, String)): Catch and ignore
	CharConversionException.  Break out of conversion loop
	on incomplete input.
	* testsuite/libjava.lang/PR36252.java: New test.
	* testsuite/libjava.lang/PR36252.out: New file, its expected output.
	* testsuite/libjava.lang/PR36252.jar: New file, its pre-compiled
	jar file.

2008-03-13  Andrew Haley  <aph@redhat.com>

	* link.cc (_Jv_Linker::resolve_method_entry): Remove broken class
	loader test.

2008-03-05  Release Manager

	* GCC 4.3.0 released.

2008-03-04  Andrew Haley  <aph@redhat.com>
